[package]
name = "wasm-ws"
version = "0.2.1"
edition = "2021"
description = "A convenience library for using websockets in WASM"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Naja Melan <najamelan@autistici.org>"]
homepage = "https://github.com/yukibtc/wasm-ws"
repository = "https://github.com/yukibtc/wasm-ws.git"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "api-bindings", "wasm", "web-programming::websocket"]
keywords = ["wasm", "websocket", "tokio", "stream", "async"]

[dependencies]
async_io_stream = { version = "0.3", features = ["map_pharos"] }
futures = { version = "0.3", default-features = false }
js-sys = "0.3"
pharos = "0.5"
send_wrapper = "0.6"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "Blob", "CloseEvent", "ErrorEvent", "MessageEvent", "DomException", "WebSocket"] }
